# fishmlserv

./: Dockerfile  README.md  knn_2K6DEQ7R8.zpln  pyproject.toml  r.txt
LB/: default.conf
note/: Untitled.ipynb  Untitled1.ipynb
src/fishmlserv/: main.py
src/fishmlserv/model/: fish.py  manager.py  model.pkl
