[project]
name = "fishmlserv"
version = "1.0.0"
description = "Creating a ML model -usingsklartn(KNeighborsClassifier"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[project.scripts]
get-model-path = 'fishmlserv.model.manager:get_model_path'
prediction = 'fishmlserv.model.manager:prediction'
